<resources>
    <string name="app_name">YemApp</string>
    <!--Splash-->
    <string name="splash">CK Softs\nAll Rights Reserved</string>
    <!--SignIn-SignUp-->
    <string name="txt_signin">Sign In</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="no_account">No Account? </string>
    <string name="create_one">Create One</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txt_signup">SIGN UP</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="logout">Log Out</string>
    <string name="theme">Day/Light Mode</string>
    <string name="sgnup_success">Congrats. You can sign in.</string>
    <string name="check_email_format">Check the e-mail format.</string>
    <string name="required_field">This field required.</string>
    <string name="psswrd_match_error">Passwords do not match.</string>
    <string name="welcome">Welcome :</string>
    <!--Cart-->
    <string name="my_cart">My Cart</string>
    <string name="btn_order">CONFIRM CART</string>
    <string name="ordered">Order Confirmed</string>


    <!--Detail-->
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="added_cart">Added to Cart</string>
    <!--CartHolder-->
    <string name="price_holder">Price :</string>
    <string name="quantity_holder">Quantity :</string>
    <!--Profile-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="entry_info">Enter your infos</string>
    <string name="btn_update">UPDATE INFO</string>
    <string name="infos_updated">Infos Updated</string>
    <!--Search-->
    <string name="search...">Search…</string>
    <!--Favourites-->
    <string name="undo">UNDO</string>
    <string name="deleted_fav">Deleted from favourites.</string>
    <!--Menus-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
</resources>